--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": "^7.2|^8.0",
         "ext-intl": "*",
-        "barryvdh/dompdf": "^0.9.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "illuminate/support": "^5.8|^6.0|^7.0|^8.0",
         "nesbot/carbon": "^1.22|^2.0"
     },
